2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* **.html:
	* generated/txt2html.sh:
	* generated/manpages/manpages2html:
	* sample-menus/*.fvwmrc:
	* sample-menus/*.{gif,png,xpm}:
	* vector-buttons/*.fvwmrc:
	* vector-buttons/DecorDemo[1-5].gif:
	removed the old html-based home page version

	* web-theme/classes/base_class.inc:
	strip trailing index.php to make urls better

2003-05-31  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/birthday_theme.inc: 
	Added css information for history page

	* history.php: 
	Created history information file

	* latest_news/index.php: 
	* latest_news/news_template.php_: 
	Added "birthday" site as child
	
	* navgen.cli: 
	Small fixes. Colored warnings
	
	* index.php: 
	* links.php: 
	* customize_theme/index.php: 
	Changed customize page as child of "links" page to get history
	page as child of "home"
	
	* authors/authors_template.php_: 
	* authors/index.php: 
	Added link to picture site.

	* index.php:
	* birthday/index.php:
	* authors/pictures/index.php:
	Added size info for pictures.
	
2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* documentation/manpages/manpages2php:
	fixed one link to be GET ready

	* documentation/manpages/stable/*.php:
	* documentation/manpages/unstable/*.php:
	* documentation/perllib/*.php:
	regenerated manpages from 2.4.16 and 2.5.7

	* authors/index.php:
	* documentation/faq/index.php:
	* latest_news/index.php:
	* definitions.inc:
	* download/index.php:
	updated files for 2.5.7

	* birthday/index.php:
	s/birthday_celebration1.gif/birthday_celebration2.gif/ for now

2003-05-30  Uwe Pross  <uwe.pross@gmx.net>

	* birthday/index.php: 
	* birthday/developers/* 
	Birthday stuff

	* index.php
	Birthday logo

2003-05-23  Bob Woodside  <dumbledore@woodsway.com>

	* links.php:
        Added link to Dorothy Robinson's Decors page; minor
        reorganization of page contents.

2003-05-23  Mikhael Goikhman  <migo@homemail.com>

	* css/default.css:
	fixed a.nohilight

	* logo-competition/*: