@@ -12,6 +12,15 @@
 	* web-theme/classes/base_class.inc:
 	strip trailing index.php to make urls better
 
+	* index.php:
+	* pictures/new.gif:
+	center some things and use a [new] image instead of ugly NEWS FLASH
+
+	* birthday/index.php:
+	* web-theme/classes/birthday_class.inc:
+	* web-theme/classes/default_class.inc:
+	improved the look of the birthday theme (hopefully)
+
 2003-05-31  Uwe Pross  <uwe.pross@gmx.net>
 
 	* web-theme/themes/birthday_theme.inc: 
